--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-sqlalchemy = "2.0.35"
 pydantic-settings = "^2.8.1"
 fastapi = "^0.115.11"
 pypdf2 = "^3.0.1"
 pandas = "^2.2.3"
+uvicorn = "^0.34.0"
+gunicorn = "^23.0.0"
 
 
 [build-system]
